# desklist

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: claude-code-review.yml  claude.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: db.rs  lib.rs  main.rs  scheduler.rs  tray.rs
src/components/: EventCard.vue  EventForm.vue  EventList.vue  ReminderConfig.vue  SettingsPanel.vue  TitleBar.vue
src/composables/: useEvents.ts  useTheme.ts
src/styles/: global.css
src/types/: index.ts
